codex-rs/core/tests/suite/snapshots/all__suite__compact__pre_turn_compaction_including_incoming_shapes.snap
---
source: core/tests/suite/compact.rs
expression: "format_history_snapshot(\"Pre-turn auto-compaction uses the prior context without the incoming user message; the follow-up carries the cwd override, image, and text.\",\n&requests)"
---
Scenario: Pre-turn auto-compaction uses the prior context without the incoming user message; the follow-up carries the cwd override, image, and text.

## Window 1
-- request 1 (turn) --
00:message/developer:
    <PERMISSIONS_INSTRUCTIONS>
01:message/developer:
    You are `/root`, the primary agent in a team of agents collaborating to fulfill the user's goals.

    At the start of your turn, you are the active agent.
    You can spawn sub-agents to handle subtasks, and those sub-agents can spawn their own sub-agents.
    All agents in the team, including the agents that you can assign tasks to, are equally intelligent and capable, and have access to the same set of tools.

    You can use `spawn_agent` to create a new agent, `followup_task` to give an existing agent a new task an...message to a running agent without triggering a turn. [hash=7d40ff8b58977202]
    Child agents can also spawn their own sub-agents.
    <OMITTED 16 LINES; ~232 TOKENS; hash=a27a44123e72d894>
    - All agents use the same current working directory.
    - As a result, edits made by one agent are immediately visible to all other agents.

    When calling `wait_agent`, prefer longer waits (minutes) to avoid busy polling.

    There are 4 available concurrency slots, meaning that up to 4 agents can be active at once, including you.

    Full-history forks (`fork_turns` omitted or `"all"`) inherit the parent model and reasoning effort and d...fork_turns` to `"none"` or a positive integer string. [hash=db3545796947884f]
02:message/developer:
    <MULTI_AGENT_MODE>
03:message/user:
    <ENVIRONMENT_CONTEXT>
04:message/user:
    USER_ONE
-- request 2 (turn) --
05:message/assistant:
    FIRST_REPLY
06:message/user:
    USER_TWO

## Window 2 (after request 2: settings changed (parallel_tool_calls, tool_choice, tools))
-- request 3 (compaction) --
00:message/developer:
    <PERMISSIONS_INSTRUCTIONS>
01:message/developer:
    You are `/root`, the primary agent in a team of agents collaborating to fulfill the user's goals.

    At the start of your turn, you are the active agent.
    You can spawn sub-agents to handle subtasks, and those sub-agents can spawn their own sub-agents.
    All agents in the team, including the agents that you can assign tasks to, are equally intelligent and capable, and have access to the same set of tools.

    You can use `spawn_agent` to create a new agent, `followup_task` to give an existing agent a new task an...message to a running agent without triggering a turn. [hash=7d40ff8b58977202]
    Child agents can also spawn their own sub-agents.
    <OMITTED 16 LINES; ~232 TOKENS; hash=a27a44123e72d894>
    - All agents use the same current working directory.
    - As a result, edits made by one agent are immediately visible to all other agents.

    When calling `wait_agent`, prefer longer waits (minutes) to avoid busy polling.

    There are 4 available concurrency slots, meaning that up to 4 agents can be active at once, including you.

    Full-history forks (`fork_turns` omitted or `"all"`) inherit the parent model and reasoning effort and d...fork_turns` to `"none"` or a positive integer string. [hash=db3545796947884f]
02:message/developer:
    <MULTI_AGENT_MODE>
03:message/user:
    <ENVIRONMENT_CONTEXT>
04:message/user:
    USER_ONE
05:message/assistant:
    FIRST_REPLY
06:message/user:
    USER_TWO
07:message/assistant:
    SECOND_REPLY
08:message/user:
    <SUMMARIZATION_PROMPT>

## Window 3 (after request 3: input diverged at item 00, settings changed (parallel_tool_calls, tool_choice, tools))
-- request 4 (turn) --
00:message/user:
    USER_ONE
01:message/user:
    USER_TWO
02:message/user:
    <COMPACTION_SUMMARY>
    PRE_TURN_SUMMARY
03:message/developer:
    <PERMISSIONS_INSTRUCTIONS>
04:message/developer:
    You are `/root`, the primary agent in a team of agents collaborating to fulfill the user's goals.

    At the start of your turn, you are the active agent.
    You can spawn sub-agents to handle subtasks, and those sub-agents can spawn their own sub-agents.
    All agents in the team, including the agents that you can assign tasks to, are equally intelligent and capable, and have access to the same set of tools.

    You can use `spawn_agent` to create a new agent, `followup_task` to give an existing agent a new task an...message to a running agent without triggering a turn. [hash=7d40ff8b58977202]
    Child agents can also spawn their own sub-agents.
    <OMITTED 16 LINES; ~232 TOKENS; hash=a27a44123e72d894>
    - All agents use the same current working directory.
    - As a result, edits made by one agent are immediately visible to all other agents.

    When calling `wait_agent`, prefer longer waits (minutes) to avoid busy polling.

    There are 4 available concurrency slots, meaning that up to 4 agents can be active at once, including you.

    Full-history forks (`fork_turns` omitted or `"all"`) inherit the parent model and reasoning effort and d...fork_turns` to `"none"` or a positive integer string. [hash=db3545796947884f]
05:message/developer:
    <MULTI_AGENT_MODE>
06:message/user:
    <ENVIRONMENT_CONTEXT>
07:message/user[2]:
    [01] <input_image:detail,image_url>
    [02] USER_THREE
